MD History: hide tooltip promo when drawer is swiped open

R=calamity@chromium.org
BUG=657357
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2450663003
Cr-Commit-Position: refs/heads/master@{#428089}

Former-commit-id: e4c0fe97a41412df82df5a4b082270fef8df0f28