chrome/browser/ui/webui/md_history_ui.cc
@@ -35,8 +35,6 @@
 
 namespace {
 
-constexpr char kShowMenuPromoKey[] = "showMenuPromo";
-
 content::WebUIDataSource* CreateMdHistoryUIHTMLSource(Profile* profile,
                                                       bool use_test_title) {
   content::WebUIDataSource* source =
@@ -119,7 +117,7 @@ content::WebUIDataSource* CreateMdHistoryUIHTMLSource(Profile* profile,
       prefs->GetBoolean(prefs::kAllowDeletingBrowserHistory);
   source->AddBoolean("allowDeletingHistory", allow_deleting_history);
 
-  source->AddBoolean(kShowMenuPromoKey,
+  source->AddBoolean("showMenuPromo",
       !prefs->GetBoolean(prefs::kMdHistoryMenuPromoShown));
 
   bool group_by_domain = base::CommandLine::ForCurrentProcess()->HasSwitch(
